--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">Bus Stop</string>
-    <string name="title_activity_main">Bus Location Map</string>
+    <string name="app_name">Bus Stop!</string>
 </resources>
